# ChangeLog for app-emulation/libvirt
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.162 2012/03/01 10:07:31 cardoe Exp $

  01 Mar 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-0.9.10-r3.ebuild,
  libvirt-9999.ebuild:
  Drop the json USE flag since using the HMP over QMP in qemu isn't supported
  anymore.

*libvirt-0.9.10-r3 (23 Feb 2012)

  23 Feb 2012; Doug Goldstein <cardoe@gentoo.org> -libvirt-0.9.10-r2.ebuild,
  +libvirt-0.9.10-r3.ebuild, libvirt-9999.ebuild, +files/libvirtd.init-r8,
  -files/libvirtd.init-r7:
  Fix issue in the init script where we weren't passing the correct values to a
  function resulting in shutdown failing. bug #405341

*libvirt-0.9.10-r2 (20 Feb 2012)

  20 Feb 2012; Doug Goldstein <cardoe@gentoo.org> -libvirt-0.9.10-r1.ebuild,
  +libvirt-0.9.10-r2.ebuild, libvirt-9999.ebuild, +files/libvirtd.init-r7,
  -files/libvirtd.init-r6:
  Fix syntax error in the init script. bug #404525

  19 Feb 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-0.9.10-r1.ebuild:
  Actually push the use of the backports tarball.

*libvirt-0.9.10-r1 (19 Feb 2012)

  19 Feb 2012; Doug Goldstein <cardoe@gentoo.org> -libvirt-0.9.10.ebuild,
  +libvirt-0.9.10-r1.ebuild:
  Fix a number of upstream show stopper bugs.

  16 Feb 2012; Agostino Sarubbo <ago@gentoo.org> libvirt-0.9.8.ebuild:
  Stable for amd64, wrt bug #403933

  15 Feb 2012; Doug Goldstein <cardoe@gentoo.org> files/libvirtd.init-r6:
  Set the halt command to be a stopped command.

*libvirt-0.9.10 (15 Feb 2012)

  15 Feb 2012; Doug Goldstein <cardoe@gentoo.org> +libvirt-0.9.10.ebuild,
  libvirt-9999.ebuild, +files/libvirtd.confd-r3, +files/libvirtd.init-r6:
  Version bump. Change init script to make it clear that it shuts down KVM/Qemu
  only based VMs and not others. Changed the helper functions to support other
  hypervisors in the future. bug #388003
