@@ -6,9 +6,9 @@ DIST libvirt-0.9.10-bp-1.tar.bz2 4359 RMD160 1b064c56007001f509cd0e940ec337d6281
 DIST libvirt-0.9.10.tar.gz 19085438 RMD160 8f103b176fc7b943a88cf7196709865edc5db5e8 SHA1 cf32d6bea295cb30461901d987f049c9547ff1e8 SHA256 5b81d9f054ee4b395b0ab4f59845d082baaa6d6c2a038c966309156dde16e11d
 DIST libvirt-0.9.6.tar.gz 17326676 RMD160 5e0837e8ee770e017e574fd002e9e489e448ca65 SHA1 9fd108e1a351d191c5d7f89458096fb35bd6413e SHA256 ce29b1cd3067b224aa834fec2a93d7613c0e72bc035760ad536a2142430bc02b
 DIST libvirt-0.9.8.tar.gz 18403525 RMD160 51bfb25dbd11a7cb5529c692d843f8ac2b1c9101 SHA1 09df699513af63b73444d776c2d02945dc9cee43 SHA256 31b20864e44bb18a2d01b7ac6569f114cbe1007689219bf24a07ddb7528abe0e
-EBUILD libvirt-0.9.10-r3.ebuild 8071 RMD160 07f68c788384c9e1fa3542da3a70490d1505ac14 SHA1 34620fee8bfddfecf0b4ea21ad39fe48b46ba8dc SHA256 6ddab58277552edf77496bc0e9c6436a9625f77c1e6ce5ba820b1770e08abb1f
+EBUILD libvirt-0.9.10-r4.ebuild 8181 RMD160 162885aa5c8ccf76c6ad37f086ed7a3c6c766a08 SHA1 c966ff34af5d51f4b1d4280b8e7329cd5f4e103f SHA256 e3b36fb1318706f9cfcd6b49805d2bca16c862d68f9bc53fe23044dbf5ab52e1
 EBUILD libvirt-0.9.6.ebuild 7907 RMD160 bf6ee27bc31c83544d172c639b05b59b3279c7dd SHA1 8ab9af963271485e43a656c2286cc431a3a15d09 SHA256 79b46ae24402a19f334fb6bdc02fab634f43c254dff0331c40aecc5b888ca04b
 EBUILD libvirt-0.9.8.ebuild 8148 RMD160 3767bd9427a9e104017b30d8a7d6654f1181592e SHA1 58e27d3fda8a63e5856838e475efc46d21b9c54f SHA256 0049122ad13fbf6d33e41d669029c12be2073ed6d198ed43a24ad732b5aceb19
-EBUILD libvirt-9999.ebuild 8067 RMD160 f35b8c23984e5b6245dbbb5b3116aea829457623 SHA1 05ec68a222022b855ae0d1d35a07060eb29aa8d8 SHA256 83a80340091c821e95ba48013be2797ade036da406d9b24e31b8bb0c262aeebb
-MISC ChangeLog 33294 RMD160 ec9d0fce4554bacf161bb415dfd71f27e323de9f SHA1 f15247b79b396ff440c7eeb9f7936239a0eed17e SHA256 9e3d3cb23b78c30c55f9da48fdc3eacf274d5b468ba580e3ef57e6736873bb39
+EBUILD libvirt-9999.ebuild 8177 RMD160 93c00ed4be93aecf06d07f0d97d3840fd0c09c25 SHA1 b3c674d87640615889da1f89bcce59a360c6ce7e SHA256 d285f6abb78105cf972abf12e0452c7ee518794b1d9d00bb932e98e0d7a66596
+MISC ChangeLog 33566 RMD160 3d22f6ab2364c500ce02fe1d606d739dedad3ca0 SHA1 633b284481618f9b8602002ddcf8f146cf46bef0 SHA256 2ee2a64fbfc76aff1eb22a10d3dae5cdb7fdf9fa82d5f163b92d2b6ebc4f12a4
 MISC metadata.xml 3132 RMD160 066870c02fd835f9a633b69328367737d4cc0b71 SHA1 940cc910ef4d1a75947afef95d73a3026bb91527 SHA256 e0eb882799f41f51c9930a1142cf5427061bdacf629a028ac4e8b65c1cf67ea4
