@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/libvirt-0.9.10-r3.ebuild,v 1.2 2012/03/01 10:07:31 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/libvirt-0.9.10-r4.ebuild,v 1.1 2012/03/05 14:46:07 cardoe Exp $
 
 BACKPORTS=1
 #AUTOTOOLIZE=yes
@@ -230,6 +230,9 @@ pkg_preinst() {
 	if has_version sys-auth/policykit; then
 		rm -rf "${D}"/usr/share/PolicyKit/policy/org.libvirt.unix.policy
 	fi
+
+	# Only sysctl files ending in .conf work
+	mv "${D}"/etc/sysctl.d/libvirtd "${D}"/etc/sysctl.d/libvirtd.conf
 }
 
 pkg_postinst() {
