@@ -1,6 +1,13 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.162 2012/03/01 10:07:31 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.163 2012/03/05 14:46:07 cardoe Exp $
+
+*libvirt-0.9.10-r4 (05 Mar 2012)
+
+  05 Mar 2012; Doug Goldstein <cardoe@gentoo.org> -libvirt-0.9.10-r3.ebuild,
+  +libvirt-0.9.10-r4.ebuild, libvirt-9999.ebuild:
+  Fix filename of sysctl config file so OpenRC respects it Identified by BT
+  <amak79@gmail.com>. bug #406729
 
   01 Mar 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-0.9.10-r3.ebuild,
   libvirt-9999.ebuild:
